Fixing Background, Playing with Canvas
-added sci-fi border images to the important divs
-swapped out the border image for the canvas
-created background image with appropriate coloration to complement
background image
-Changed font to white for important divs
-Changed font for tooltips in order to also be different from white but
visible on background
-Fixed the colors for clicking on the buttons
-*** width resizing messed up somehow by the borders, need to look at...

--- a/40k/styles/styles.css
+++ b/40k/styles/styles.css
@@ -19,7 +19,6 @@ h4{
 	margin-left: auto;
 	margin-right: auto;}
 #content {
-	position: relative;
 	height: 450px;
 }
 #sidebar {
@@ -30,7 +29,7 @@ h4{
 }
 
 #header, #footer, #content, #middle, #sidebar {
-	opacity:0.90;
+	opacity:1.0;
 }
 #footer {
 	text-align: center;
@@ -46,18 +45,9 @@ Canvas Styles
 *************/
 
 #battlefield {
+	border-image: url('../images/vent.jpg') 30 30 stretch;
+	border-width: 10px;
 	background-color: black;
-	position: absolute;
-	top: 56px;
-	left: 46px;
-}
-
-#battlefield_border {
-	position: absolute;
-	top: 30px;
-	left: 25px;
-	min-width: 277px;
-	min-height: 414px;
 }
 
 /*************
@@ -88,15 +78,7 @@ button:active {
 	position: relative; top: 3px;
 	-webkit-box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);
 	-moz-box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);
-	box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);}
-button:active:after {
-	content: ""; 
-	width: 100%; 
-	height: 3px; 
-	background: #fff; 
-	position: absolute; 
-	bottom: -1px; 
-	left: 0;}
+	box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 0.5), inset 0 0px 3px rgba(0, 0, 0, 0.5);}
 button:hover {
 	background-color: #edbe58;
 }
@@ -107,7 +89,7 @@ Styles for the Tooltip
 
 * {margin:0; padding:0}
 #text {margin:50px auto; width:500px}
-.tip {color:#900; padding-bottom:1px; border-bottom:1px dotted #900; cursor:pointer}
+.tip {color:#FFFF9F; padding-bottom:1px; border-bottom:1px dotted #FFFF9F; cursor:pointer}
 
 #tt {position:absolute; display:block;}
 #ttcont {
@@ -344,8 +326,22 @@ MEDIA QUERIES
 	border-radius: 15px;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
-	width: auto\9; /* ie8 */
+/**********************************
+Experimenting with background image
+**********************************/
+
+#content,#middle,#sidebar,#header,#footer {
+	color: #fff;
+	background: #f8f8f8 url('../images/blue_tile.jpg');
+	border-image: url('../images/vent.jpg') 30 30 stretch;
+	border-width: 20px;
+}
+#content {
+	width: 250px;
+}
+#middle {
+width: 254px;
+}
+#sidebar {
+	width: 230px;
 }
